--- a/templates/device/add.html.twig
+++ b/templates/device/add.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Device{% endblock %}
+{% block title %}{{'Winback Interface | New Device'|trans}}{% endblock %}
 
 {% block content %}
     <div class="container">
