--- a/templates/includes/_footer.html.twig
+++ b/templates/includes/_footer.html.twig
@@ -1,3 +1,22 @@
-<footer class="footer mt-2 text-center p-4 bg-light" style="background-color: rgba(0, 0, 0, 0.05);">
-© 2022 Copyright : <a class="text-reset fw-bold" href="https://winback.com/">WINBACK</a>
+<footer class="container-fluid footer mt-2 text-center text-white" style="background-color: #000000;">
+<div class="d-flex justify-content-around">
+    <!-- Social Icons -->
+    <div class="d-flex flex-column justify-content-between">
+    <img src="{{asset('img/wk_mail/wk_logo_footer.png')}}" alt="Logo Footer">
+    <div class="footer-mail-icons">
+        <img src="{{asset('img/wk_mail/wk_fb_icon.png')}}" alt="Logo Fb">
+        <img src="{{asset('img/wk_mail/wk_insta_icon.png')}}" alt="Logo Insta">
+        <img src="{{asset('img/wk_mail/wk_linkedin_icon.png')}}" alt="Logo Link">
+    </div>
+    </div>
+    <!-- Adress -->
+    <div class="footer-mail-items footer-mail-adress">
+        <div class="footer-mail-item">20 Avenue Victor Hugo</div>
+        <div class="footer-mail-item">64200 Biarritz - France</div>
+        <div class="footer-mail-item">0483661666</div>
+        <div class="footer-mail-item">hello@winback.com</div>
+    </div>
+</div>
+<!-- Copyright -->
+<div class="footer-mail-items"><em>2023 Copyright <a class="text-reset fw-bold" href="https://winback.com/">Winback</a>©, All rights reserved</em></div>
 </footer>
