--- a/templates/includes/_header.html.twig
+++ b/templates/includes/_header.html.twig
@@ -1,4 +1,4 @@
-<div class="w-100">
+
     <!--
     <header class="header shadow d-flex justify-content-center">
             <div data-target="example-sidenav" class="press sidenav-trigger flex-1">
@@ -14,48 +14,68 @@
             </div>
     </header>
     -->
-    <nav class="navbar navbar-expand-md shadow primary bg-orange px-3 fixed-top">
+    <!--<nav class="navbar navbar-expand-md shadow primary bg-orange px-3 fixed-top" id="navbar">-->
+    <nav class="container-fluid navbar navbar-expand-lg shadow bg-orange sticky-top">
         <!--
         <a class="navbar-brand" href="{{path('home')}}"><img src="{{asset('img/winback_logo.svg')}}" alt="winback_logo" width="140" height="auto"></a>
         -->
-        <img class="navbar-brand" src="{{asset('img/winback_logo.svg')}}" alt="winback_logo" width="140" height="auto">
+        <a href="{{path('home')}}">
+        <img class="navbar-brand" id="navbar-logo" src="{{asset('img/winback_logo.svg')}}" alt="winback_logo" width="140" height="auto">
+        </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span><i class="fa-solid fa-bars text-white"></i></span>
         </button>
         <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
-            {% if is_granted('ROLE_USER') %}
+            
 
-            <ul class="navbar-nav">
+            <ul class="navbar-nav d-flex align-items-center me-auto">
+            {% if is_granted('ROLE_GOE') %}
                 <!--
                 <li><a class="nav-link" href="{{path('home')}}"><i class="fa-solid fa-house"></i></a></li>
                 -->
-                <li><a class="nav-link" href="{{path('software')}}">Software</a></li>
-                <li><a class="nav-link" href="{{path('device')}}">Device</a></li>
+                <li><a class="nav-link" href="{{path('software')}}">{{ 'Softwares'|trans }}</a></li>
+                <li><a class="nav-link" href="{{path('device')}}">{{ 'Devices'|trans }}</a></li>
                 {% if is_granted("ROLE_ADMIN") %}
-                <li><a class="nav-link" href="{{path('dashboard')}}">Dashboard</a></li>
+                <li><a class="nav-link" href="{{path('dashboard')}}">{{ 'Dashboard'|trans }}</a></li>
                 {% endif %}
-                
-                <!--<a class="nav-link" href="{{path('statistics')}}">Statistics</a>-->
                 <!--<a class="nav-link" href="">Maintenance</a>-->
                 {% if is_granted('ROLE_ADMIN') %}
-                <li><a class="nav-link" href="{{path('app_sn')}}">SN</a></li>
+                <li><a class="nav-link" href="{{path('app_sn')}}">{{ 'SN'|trans }}</a></li>
                 {% endif %}
-            </ul>
-
+                {% if is_granted('ROLE_ADMIN') %}
+                <li><a class="nav-link" href="{{path('statistics')}}">{{ 'Statistics'|trans }}</a></li>
+                {% endif %}
+            {% endif %}
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="dropdown-language" role="button"
+                    data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    {{ app.request.locale|locale_name(app.request.locale) }}
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown-language">
+                    <li><a class="dropdown-item" href="{{ path('device', {_locale: 'en'}) }}"><img class="icon-flags" src="{{asset('img/flags/uk.png')}}" alt=""> English</a></li>
+                    <li><a class="dropdown-item" href="{{ path('device', {_locale: 'fr'}) }}"><img class="icon-flags" src="{{asset('img/flags/france.png')}}" alt=""> Français</a></li>
+                    <li><a class="dropdown-item" href="{{ path('device', {_locale: 'ko'}) }}"><img class="icon-flags" src="{{asset('img/flags/korea.png')}}" alt=""> 한국어</a></li>
+                    </ul>
+                </li>
             
+            </ul>
+            
+            {% if is_granted('ROLE_USER') %}
             <div class="d-flex flex-nowrap">
                 <div>
-                    Welcome {{ app.user }}
+                    {{"Welcome"|trans}} {{ app.user }}
                 </div>
                 <a class="nav-link" href="{{path('app_logout')}}">
                     <i class="fa fa-sign-out text-white" aria-hidden="true"></i>
                 </a>
             </div>
             {% endif %}
+            
+
+            
         </div>
 
     </nav>
-</div>
 
 <!-- ##### Sidenav ##### -->
 <!--
