--- a/templates/software/delete_modals.html.twig
+++ b/templates/software/delete_modals.html.twig
@@ -1,16 +1,15 @@
 {# ===== DELETE MODALS ===== #}
-{% for software in softwares %}
-    <div class="modal fade" id="modal_delete_{{software.id}}" data-ax="modal" aria-hidden="true" tabindex="-1">
+{#{% for software in family.softwares %}#}
+    <div class="modal fade" id="modal_delete_{{soft.id}}" data-ax="modal" aria-hidden="true" tabindex="-1">
         <div class="modal-dialog">
 
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5>Delete software</h5>
-                    <!--<button data-target="modal_delete_{{software.id}}" class="ml-auto btn shadow-1 rounded-1 small modal-trigger mt-2 mr-2"><i class="fa-solid fa-xmark"></i></button>-->
+                    <h5>{{'Delete software'|trans}}</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-footer">
-                    <a href="{{path('software_delete', {'id': software.id})}}" class="btn btn-outline-danger shadow-1 rounded-1 small">Validate</a>
+                    <a href="{{path('software_delete', {'deviceFamily': family.id, 'id': soft.id})}}" class="btn btn-outline-danger shadow-1 rounded-1 small">{{'Validate'|trans}}</a>
                 </div>
             </div>
         </div>
@@ -33,4 +32,4 @@
             <button data-target="modal-edit" class="ml-auto btn shadow-1 rounded-1 small modal-trigger">Close</button>
         </div>
     </div> #}
-{% endfor %}
+{#{% endfor %}#}
