--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!--<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">-->
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}{{'Winback Interface'|trans}}{% endblock %}</title>
         <!--
         <link rel="icon" type="image/png" href="{{ asset('img/Logo Winback.png') }}" />
         -->
@@ -28,6 +28,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js" integrity="sha512-ElRFoEQdI5Ht6kZvyzXhYG9NqjtkmlkfYk0wr6wHxU9JEHakS7UJZNeml5ALk+8IKlU6jDgMabC3vkumRokgJA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script src="{{ asset('js/jquery-3.3.1.min.js')}}"></script>
         <script src="https://kit.fontawesome.com/06466c4cae.js" crossorigin="anonymous"></script>
+        <script src="{{ asset('js/_nav.js')}}" defer></script>
         <!--
         <script type="text/javascript" defer>
         var path = "{{ asset('js/TCPClient2.php')}}";
@@ -44,12 +45,12 @@
     </head>
 
     <body>
-        {% include 'includes/_header.html.twig' %}
+    {% include 'includes/_header.html.twig' %}
         <main>
             {% block content %}
             {% endblock %}
         </main>
-        {% include 'includes/_footer.html.twig' %}
+    {% include 'includes/_footer.html.twig' %}
         <!--
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
         -->
