--- a/templates/dashboard.html.twig
+++ b/templates/dashboard.html.twig
@@ -1,30 +1,28 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Dashboard{% endblock %}
+{% block title %}{{ 'Winback Interface | Dashboard'|trans }}{% endblock %}
 
 {% block content %}
-    <div class="container row mt-5 mb-5 p-5 d-flex align-items-stretch">
-        <div class="col-md-6 mb-5">
+
+
+    <div class="container row d-flex align-items-stretch">
+        <div class="col-sm-6 col-md-4 col-lg-3 mb-5">
             <div class="card dashboard-card h-100" style="box-shadow: 0px 0px 2px 2px #acabab81;">
-                <h3 class="card-header w-100"><strong style="text-transform: uppercase;">Total Devices</strong></h3>
-                <div class="card-body d-flex flex-column justify-content-center w-100">
+                <h3 class="card-header w-100"><div class="text-muted" style="text-transform: uppercase;">Devices</div></h3>
+                <div class="card-body d-flex flex-column justify-content-center w-100 p-0">
                     <canvas id="myChart"></canvas>
                 </div>
+                
                 <div id="total_count" style="display: none;">{{countDevices}}</div>
+                <div class="card-footer w-100"></div>
             </div>
         </div>
 
-        <div class="col-md-6 mb-5 d-flex flex-wrap align-items-center justify-content-evenly">
+        <div class="col-sm-6 col-md-4 col-lg-3 mb-5 d-flex flex-wrap align-items-center justify-content-evenly">
             
 
                 <div id="carouselExampleIndicators" class="carousel carousel-dark slide w-100">
-                <!--
-                <div class="carousel-indicators">
-                    {% for deviceFamily in devicesFamily %}
-                    <button type="button" class="{{ (deviceFamily=="BACK4") ? 'active' : '' }}" data-bs-target="#carouselExampleIndicators" data-bs-slide-to={{ loop.index0 }} aria-label="Slide {{ loop.index }}"></button>
-                    {% endfor %}
-                </div>
-                -->
+
                 <div class="carousel-inner" style="box-shadow: 0px 0px 2px 2px #acabab81; border-radius: 5px;">
                     {% for deviceFamily in devicesFamily %}
                     <div class="carousel-item {{ (deviceFamily=="BACK4") ? 'active' : '' }}">
@@ -32,8 +30,8 @@
                     <img src="..." class="d-block w-100" alt="...">
                     -->
                         <div class="card dashboard-card">
-                            <h3 class="card-header w-100 device_family" id="{{deviceFamily}}"><strong>{{deviceFamily}}</strong></h3>
                             
+                            <h3 class="card-header w-100 device_family text-muted" id="{{deviceFamily}}">{{deviceFamily}}</h3>
                             <div class="card-body d-flex flex-column justify-content-around w-100 h-100">
                                 <canvas id="myChart2_{{deviceFamily}}" class="mb-3"></canvas>
                                 <div class="d-flex flex-nowrap justify-content-between align-items-center">
@@ -81,6 +79,9 @@
 
                 
             
+        </div>
+        <div class="example-wrapper">
+            {#{{ render_chart(chart, {'id': 'my-chart'})}}#}
         </div>
     </div>
     <div class="container row">
