--- a/templates/device/info_modals.html.twig
+++ b/templates/device/info_modals.html.twig
@@ -6,7 +6,7 @@
 
         <div class="modal-content">
             <div class="modal-header">
-            <h5 class="text-center w-100 align-middle">Device Info</h5>
+            <h5 class="text-center w-100 align-middle">{{ 'Device Info'|trans }}</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
 
@@ -15,15 +15,15 @@
                 <table class="table striped">
                     <tbody>
                         <tr>
-                            <th>Serial Number :</th>
+                            <th>{{ 'Serial Number'|trans }} :</th>
                             <td>{{device.sn}}</td>
                         </tr>
                         <tr>
-                            <th>Device Family :</th>
+                            <th>{{ 'Device Type'|trans }} :</th>
                             <td>{{device.deviceFamily}}</td>
                         </tr>
                         <tr>
-                            <th>Version :</th>
+                            <th>{{ 'Version'|trans }} :</th>
                             <td>{{device.version}}</td>
                         </tr>
                         {# 
@@ -34,40 +34,48 @@
                         #} 
 
                         <tr>
-                            <th>IP Adress :</th>
+                            <th>{{ 'IP Address'|trans }} :</th>
                             <td>{{device.ipAddr}}</td>
                         </tr>
+                        {#
                         <tr>
-                            <th>Log Pointeur :</th>
+                            <th>{{ 'Log Pointer'|trans }} :</th>
                             <td>{{device.logPointeur}}</td>
                         </tr>
+                        #}
                         <tr>
-                            <th>Advertising :</th>
+                            <th>{{ 'Advertising'|trans }} :</th>
                             <td class="{{(device.pub)? 'device-active': 'device-inactive'}}">
                             {{ (device.pub)? 'Yes': 'No'}}
                             </td>
                         </tr>
                         <tr>
-                            <th>PIN code :</th>
+                            <th>{{ 'PIN code'|trans }} :</th>
                             <td>{{device.codePin}}</td>
                         </tr>
                         <tr>
-                            <th>Creation Date :</th>
-                            <td>{{device.createdAt|date}}</td>
+                            <th>{{ 'Creation Date'|trans }} :</th>
+                            <td>{{device.createdAt|format_datetime('medium', 'short')}}</td>
                         </tr>
                         <tr>
-                            <th>Server last activity :</th>
-                            <td>{{device.serverDate|date}}</td>
+                            <th>{{ 'Update Date'|trans }} :</th>
+                            <td>{{device.updatedAt|format_datetime('medium', 'short')}}</td>
                         </tr>
+                        {#
                         <tr>
-                            <th>Status :</th>
+                            <th>{{ 'Server last activity'|trans }} :</th>
+                            <td>{{device.serverDate|format_datetime('medium', 'short')}}</td>
+                        </tr>
+                        #}
+                        <tr>
+                            <th>{{ 'Status'|trans }} :</th>
                             <td>
                                 <div class="{{(device.isActive)? 'device-active': 'device-inactive'}}">{{(device.isActive)? 'Active':'Inactive'}}</div>
                             </td>
                         </tr>
                         {% if is_granted("ROLE_SUPER_ADMIN") %}
                         <tr class="text-center">
-                            <th>Connect :</th>
+                            <th>{{ 'Connect'|trans }} :</th>
                             <td>
                                 {% if (device.deviceFamily == "BIOBACK" or device.deviceFamily == "RSHOCK" or device.deviceFamily == "CRYOBACK4") %}
                                     
@@ -88,10 +96,10 @@
                         </tr>
                         {% endif %}
 
-                        {% if is_granted("ROLE_SAV")%}
+                        {% if is_granted("ROLE_GOE")%}
                         
                         <tr>
-                            <th>Forced :</th>
+                            <th>{{ 'Forced'|trans }} :</th>
                             <td>
                                 <a href="#" class="form-field form-default"
                                     data-target="modal_forced_{{device.id}}"
@@ -109,7 +117,7 @@
                             </td>
                         </tr>
                         <tr>
-                            <th>Upload Version :</th>
+                            <th>{{ 'Upload Version'|trans }} :</th>
                             <td>
                                 <input type="text" 
                                     data-id="{{device.id}}" 
@@ -126,12 +134,12 @@
             </div>
             <div class="divider"></div>
             <div class="modal-footer">
-                {% if is_granted("ROLE_SAV")%}
+                {% if is_granted("ROLE_GOE")%}
                 <div>
                     <a href="" 
-                    class="update btn btn-outline-dark red shadow-1 rounded-1 small" 
+                    class="update btn btn-dark red shadow-1 rounded-1 small" 
                     id="update_{{device.id}}" 
-                    name="validate">Validate
+                    name="validate">{{ 'Validate'|trans }}
                     </a>
                 </div>
                 {% endif %}
