--- a/templates/registration/confirmation_admin.html.twig
+++ b/templates/registration/confirmation_admin.html.twig
@@ -1,33 +1,38 @@
 {% apply inline_css(source('@styles/email.css')) %}
+
 <header class="header-mail"><img src="{{ email.image('@images/wk_mail/wk_logo_header.png') }}"{#src="{{asset('img/wk_mail/wk_logo_header.png')}}"#} alt="Logo Header"></header>
-<h1 class="h1-mail">Hello {{ email.toName }}!</h1>
+<h1 class="h1-mail">New User Registered!</h1>
 
 <p class="margin-bottom">
-<strong>Forgot your password ?</strong><br>
-We received a request to reset the password for your account.<br><br>
-To reset your password, please visit the following link:</p>
-
-<a href="{{ url('app_reset_password', {token: resetToken.token}) }}">{{ url('app_reset_password', {token: resetToken.token}) }}</a><br>
-
-<p>This link will expire in {{ resetToken.expirationMessageKey|trans(resetToken.expirationMessageData, 'ResetPasswordBundle') }}.</p><br><br>
-
-<p>If you did not request a password reset, no further action is required.</p><br>
-<p>Thanks !</p><br><br>
-<p><strong>The Winback Team.</strong></p><br>
-<footer class="footer-mail" style="background-color: #000000">
+{{ username }} signed up with the following email:
+<code>{{ email.to[0].address }}</code>
+<br>
+Please verify the user identity and attribute roles accordingly.
+<!-- TODO Direct Link to users interface -->
+<br>
+{#
+    <a href="">Click here to activate your account</a>
+    (this link is valid until {{ expiration_date|date('F jS') }})
+#}
+    {#This link will expire in {{ expiresAtMessageKey|trans(expiresAtMessageData, 'VerifyEmailBundle') }}.#}
+Don't hesitate to contact us with your feedback or if you encounter any issues to access your data.<br><br>
+<strong>The Winback Team.</strong>
+</p>
+<br>
+<footer class="footer-mail">
     <!-- Social Icons -->
     <div class="footer-mail-icons">
         <img src="{{ email.image('@images/wk_mail/wk_fb_icon.png') }}"{#src="{{asset('img/wk_mail/wk_fb_icon.png')}}"#} alt="Logo Fb">
         <img src="{{ email.image('@images/wk_mail/wk_insta_icon.png') }}"{#src="{{asset('img/wk_mail/wk_insta_icon.png')}}"#} alt="Logo Insta">
         <img src="{{ email.image('@images/wk_mail/wk_linkedin_icon.png') }}"{#src="{{asset('img/wk_mail/wk_linkedin_icon.png')}}"#} alt="Logo Link">
-    </div><br>
+    </div>
     <div class="footer-mail-items"><img src="{{ email.image('@images/wk_mail/wk_logo_footer.png') }}"{#src="{{asset('img/wk_mail/wk_logo_footer.png')}}"#} alt="Logo Footer"></div>
     <!-- Adress -->
     <div class="footer-mail-items footer-mail-adress">
-        <div class="footer-mail-item">20 Avenue Victor Hugo</div>
-        <div class="footer-mail-item">64200 Biarritz - France</div>
-        <div class="footer-mail-item">0483661666</div>
-        <div class="footer-mail-item">hello@winback.com</div>
+        <div>20 Avenue Victor Hugo</div>
+        <div>64200 Biarritz - France</div>
+        <div>0483661666</div>
+        <div>hello@winback.com</div>
     </div>
     <!-- Copyright -->
     <div class="footer-mail-items"><em>Copyright Winback©, All rights reserved</em></div>
