--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,14 +1,16 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Register{% endblock %}
+{% block title %}{{ 'Winback Interface | Registration | Welcome !'|trans }}{% endblock %}
 
 {% block content %}
-    <div class="container row d-flex justify-content-center align-items-center mt-sm-5 mb-sm-5 h-100 w-100">
-        <div class="col-md-9 col-lg-6 col-xl-5 p-5">
+    <div class="container row d-flex justify-content-center align-items-center p-5">
+        <div class="col-md-9 col-lg-6 col-xl-5 p-5 d-flex justify-content-center">
+        <!--<div class="col-md-6 p-5 d-flex justify-content-center">-->
         <img src="{{ asset('img/winback-logo.webp') }}" class="img-fluid" alt="">
         </div>
 
         <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
+        <!--<div class="col-md-6">-->
             {% for flash_error in app.flashes('verify_email_error') %}
                 <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
             {% endfor %}
@@ -18,44 +20,44 @@
                     <i class="fa-solid fa-circle fa-stack-2x" style="color: #f18841;"></i>
                     <i class="fa-regular fa-user fa-stack-1x fa-inverse"></i>
                 </span>
-                <h2 class="mb-sm-3">Register</h2>
+                <h2 class="mb-sm-3">{{ 'Register'|trans }}</h2>
                 <div class="form-outline">
                     <div class="input-group flex-nowrap">
                         <span class="input-group-text mb-3" id="addon-wrapping">
                         <i class="fa-solid fa-user"></i>
                         </span>
-                        {{ form_row(registrationForm.username, {'attr': {'placeholder': 'Username','id': 'username'}}) }}
+                        {{ form_row(registrationForm.username, {attr: {placeholder: ( 'Username'|trans ), id: 'username', style: 'border-left-style: none; border-top-left-radius: 0; border-bottom-left-radius: 0;'}})}}
                     </div>
                 </div>
                 <div class="form-outline">
                     <div class="input-group flex-nowrap">
                         <span class="input-group-text mb-3" id="addon-wrapping"><i class="fa-solid fa-envelope"></i></span>
-                        {{ form_row(registrationForm.email, {'attr': {'placeholder': 'Email','id': 'email'}}) }}
+                        {{ form_row(registrationForm.email, {attr: {placeholder: ( 'Email'|trans ), id: 'email', style: 'border-left-style: none; border-top-left-radius: 0; border-bottom-left-radius: 0;'}}) }}
                     </div>
                 </div>
                 <div class="form-outline">
                     <div class="input-group flex-nowrap">
                         <span class="input-group-text mb-3" id="addon-wrapping"><i class="fa-solid fa-lock"></i></span>
                         
-                        {{ form_row(registrationForm.password.first, {'attr': {'placeholder': 'Password'}}) }}
+                        {{ form_row(registrationForm.password.first, {attr: {placeholder: ( 'Password'|trans ), style: 'border-left-style: none; border-top-left-radius: 0; border-bottom-left-radius: 0;'}}) }}
                     </div>
                 </div>
                 <div class="form-outline">
                     <div class="input-group flex-nowrap">
                         <span class="input-group-text mb-3" id="addon-wrapping"><i class="fa-solid fa-lock"></i></span>
-                        {{ form_row(registrationForm.password.second, {'attr': {'placeholder': 'Confirm Password'}}) }}
+                        {{ form_row(registrationForm.password.second, {attr: {placeholder: ( 'Confirm Password'|trans ), style: 'border-left-style: none; border-top-left-radius: 0; border-bottom-left-radius: 0;'}}) }}
                     </div>
                 </div>
-                {{ form_row(registrationForm.agreeTerms) }}
+                {{ form_row(registrationForm.agreeTerms, {attr: {label: ( 'Agree terms'|trans ), style: 'margin-bottom: 0;'}}) }}
 
-                <button type="submit" class="btn txt-white bg-orange btn-outline-orange w-100 h-auto">Register</button>
+                <button type="submit" class="btn txt-white bg-orange btn-outline-orange w-100 h-auto">{{ 'Register'|trans }}</button>
 
                 <div class="divider d-flex align-items-center my-3">
-                    <p class="text-center fw-bold mx-3 mb-0">Or</p>
+                    {#<p class="text-center fw-bold mx-3 mb-0">{{ 'Or'|trans }}</p>#}
                 </div>
                 <div class="d-flex justify-content-around align-items-center w-100 p-0 flex-wrap">
-                    <p class="mb-1 text-nowrap">Already registered ?</p>
-                    <a class="btn btn-secondary txt-white mb-1" href="{{ path('app_login') }}">Sign In</a>
+                    <p class="mb-1 text-nowrap">{{ 'Already registered ?'|trans }}</p>
+                    <a class="btn btn-secondary txt-white mb-1" href="{{ path('app_login') }}">{{ 'Sign In'|trans }}</a>
                 </div>
             {{ form_end(registrationForm) }}
         </div>
