--- a/templates/sn.html.twig
+++ b/templates/sn.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}SN{% endblock %}
+{% block title %}{{'Winback Interface | SN'|trans}}{% endblock %}
 
 {% block content %}
-    <div class="container-fluid d-flex flex-column justify-content-between align-items-center vh-80 mt-5 mb-5">
+    <div class="container d-flex flex-column justify-content-between align-items-center vh-80">
             <div class="row w-100 h-100 mt-4">
                 <div class="col-md-3">
                 {% include "sn/_filter.html.twig" %}
